cancel-auction-by-seller api
